[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["Thomas Leigh <thomas@fluently.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
